Bug 1034634: Improve ScopedNSSTypes.h to compile without warnings, r=mmc